--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-title: [Watcharakorn Rassameedit]
-description: [ชื่อเล่นชื่อเบสท์ ชอบสุนัขพันธุ์คอร์กี้ครับ]
+# remote_theme: pages-themes/minimal@v0.2.0
+# plugins:
+# - jekyll-remote-theme # add this line to the plugins list if you already have one
+# title: [Watcharakorn Rassameedit]
+# description: [ชื่อเล่นชื่อเบสท์ ชอบสุนัขพันธุ์คอร์กี้ครับ]
