--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@
 # title: [Watcharakorn Rassameedit]
 # description: [ชื่อเล่นชื่อเบสท์ ชอบสุนัขพันธุ์คอร์กี้ครับ]
 
-theme : minima
+# theme : minima
